[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/fonts/control.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/godot_subtitles/fonts/Roboto/normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/UI/menu/PauseMenu.gd" type="Script" id=3]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.156863 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.156863 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("HBoxContainer/PanelContainer/Panel/VBoxContainer/VolverButton")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.156863 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 364.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Panel" type="Panel" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 357.0
margin_bottom = 713.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 250.0
margin_right = 350.0
margin_bottom = 313.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 350.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "Pause Menu"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 317.0
margin_right = 350.0
margin_bottom = 321.0

[node name="VolverButton" type="Button" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
margin_top = 325.0
margin_right = 350.0
margin_bottom = 355.0
custom_fonts/font = ExtResource( 2 )
text = "Volver"

[node name="OptionsButton" type="Button" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 359.0
margin_right = 350.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 2 )
text = "Opciones"

[node name="Restart" type="Button" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 393.0
margin_right = 350.0
margin_bottom = 422.0
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="SalirButton" type="Button" parent="HBoxContainer/PanelContainer/Panel/VBoxContainer"]
margin_top = 426.0
margin_right = 350.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )
text = "Salir"

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 368.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 502.0
margin_bottom = 80.0
theme = SubResource( 3 )
window_title = "Confirmá, por favor..."
dialog_text = "Si vuelves al menú principal perderás tu progreso actual"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/show = SubResource( 1 )

[connection signal="pressed" from="HBoxContainer/PanelContainer/Panel/VBoxContainer/VolverButton" to="." method="_on_VolverButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/Panel/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="HBoxContainer/PanelContainer/Panel/VBoxContainer/SalirButton" to="." method="_on_SalirButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
